# planwarden

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: ci.yml  release.yml
examples/: review-plan.json  review-roadmap.json
plans/: add-structured-review-approval-prompts.md  guard-create-envelopes-and-add-guided-review-walkthrough.md  planwarden-mvp.md  tighten-guided-review-presentation-contract.md
plans/roadmaps/: planwarden-mvp.md
plans/tasks/: cut-0-3-1-release.md  cut-0-4-0-release.md  land-plan-rename-and-cut-release.md  remove-estimates-from-planning-outputs.md  rename-roadmap-to-plan.md  rewrite-readme-around-a-concise-example-led-structure.md
scripts/: patch-homebrew-formula-checksums.sh  smoke-test-installed-planwarden.sh
src/: lib.rs  main.rs  plan_file.rs  review.rs  schema.rs
tests/: cli.rs
