[package]
name = "planwarden"
version = "0.1.0"
edition = "2024"
description = "CLI planning enforcer for AI agents"
license = "MIT"
repository = "https://github.com/nclandrei/planwarden"
homepage = "https://github.com/nclandrei/planwarden"
readme = "README.md"
authors = ["Andrei Nicolae"]
keywords = ["ai", "agent", "planning", "cli", "workflow"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "planwarden"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3.23.0"

[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.dist]
dist = true
installers = ["shell", "homebrew"]
targets = ["x86_64-apple-darwin", "aarch64-apple-darwin", "x86_64-unknown-linux-gnu"]
tap = "nclandrei/homebrew-tap"
formula = "planwarden"
display-name = "planwarden"
